hphp/hack/test/extended_reasons/fn_subtyping_contra_2.php.exp
error: Typing[4110] Invalid argument

Expected `Sub`

 6 | function foo_2((function((function(»Sub«): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 6, character 36 - line 6, character 38:

But got `Super`

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(»Super«): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 7, character 36 - line 7, character 40:

Here's why: this hint

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(»Super«): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 7, character 36 - line 7, character 40:

flows *into* this hint, via the (contravariant) 1st function parameter

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function(»(function(Super): void)«): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 7, character 26 - line 7, character 48:

which itself flows *from* this hint, via the (contravariant) 1st function parameter

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2(»(function((function(Super): void)): void)« $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 7, character 16 - line 7, character 56:

which itself flows *into* this expression

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) »$f«): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 7, character 58 - line 7, character 59:

which itself flows *into* this expression

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2(»$f«);
 9 | }

File "fn_subtyping_contra_2.php", line 8, character 9 - line 8, character 10:

which itself flows *into* this expression, via the (contravariant) 1st function parameter

 6 | function foo_2((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   »foo_2«($f);
 9 | }

File "fn_subtyping_contra_2.php", line 8, character 3 - line 8, character 7:

which itself flows *from* this declaration

 6 | function »foo_2«((function((function(Sub): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 6, character 10 - line 6, character 14:

which itself flows *into* this hint, via the (contravariant) 1st function parameter

 6 | function foo_2(»(function((function(Sub): void)): void)« $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 6, character 16 - line 6, character 54:

which itself flows *from* this hint, via the (contravariant) 1st function parameter

 6 | function foo_2((function(»(function(Sub): void)«): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 6, character 26 - line 6, character 46:

which itself flows *into* this hint, via the (contravariant) 1st function parameter

 6 | function foo_2((function((function(»Sub«): void)): void) $_): void {}
 7 | function bar_2((function((function(Super): void)): void) $f): void {
 8 |   foo_2($f);
 9 | }

File "fn_subtyping_contra_2.php", line 6, character 36 - line 6, character 38:

1 error found.
